--- a/base.css
+++ b/base.css
@@ -12,9 +12,30 @@ body{
     margin: 0px;
     font-family: Roboto, arial;
     background-color: #F8F8FF;
+    color: #2b2b2b;
 }
 
-div, section,
+.clickable{
+    cursor: pointer; cursor: hand;
+}
+
+
+.base_background_greyGrad{
+    /* fallback */ 
+    background-color: #2b2b2b;
+    /* Safari 4-5, Chrome 1-9 */ 
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2b2b2b), to(#585858));
+     /* Safari 5.1, Chrome 10+ */ 
+    background: -webkit-linear-gradient(top,#2b2b2b 40%, #585858);
+    /* Firefox 3.6+ */ 
+    background: -moz-linear-gradient(top, #2b2b2b 40%, #585858); 
+    /* IE 10 */ 
+    background: -ms-linear-gradient(top, #2b2b2b 40%, #585858); 
+    /* Opera 11.10+ */ 
+    background: -o-linear-gradient(top, #2b2b2b 40%, #585858);
+}
+
+
 .borderBox{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -22,16 +43,16 @@ div, section,
 }
 
 .base_color_red{
-    color: #a53f3f;
+    color: #a53f3f !important;
 }
 .base_background_red{
-    background-color: #a53f3f;
+    background-color: #a53f3f !important;
 }
 .base_color_grey{
-    color: #2b2b2b;
+    color: #2b2b2b !important;
 }
 .base_background_grey{
-    background-color: #2b2b2b;
+    background-color: #2b2b2b !important;
 }
 .base_color_white{
     color: #FFFFFF;
