--- a/home.css
+++ b/home.css
@@ -1,26 +1,16 @@
-body>section{
+.home_body>section{
     min-height: 300px;
     padding: 20px;
+}
+.home_body>section>h1{
+    text-align: center;
 }
 
 #home_section_top{
     position: relative;
     height: 700px;
-    background-color: #2b2b2b;
     color: #FFFFFF;
-
-    /* fallback */ 
-    background-color: #2b2b2b;
-    /* Safari 4-5, Chrome 1-9 */ 
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2b2b2b), to(#585858));
-     /* Safari 5.1, Chrome 10+ */ 
-    background: -webkit-linear-gradient(top,#2b2b2b, #585858);
-    /* Firefox 3.6+ */ 
-    background: -moz-linear-gradient(top, #2b2b2b, #585858); 
-    /* IE 10 */ 
-    background: -ms-linear-gradient(top, #2b2b2b, #585858); 
-    /* Opera 11.10+ */ 
-    background: -o-linear-gradient(top, #2b2b2b, #585858);
+    border-bottom: 4px solid #a53f3f;
 }
 
 .home_logo_container{
@@ -40,13 +30,33 @@ body>section{
     color: #a53f3f;
 }
 .home_logo_slogan{
+    font-style: italic;
     font-size: 16px;
 }
 
 /*-----section-----*/
 
 #home_section_1{
-    height: 300px;
+
+}
+
+.home_market_block{
+    display: inline-block;
+    width: 50%;
+    text-align: center;
+    border: 1px solid #e4e4e4;
+    box-sizing: border-box;
+    vertical-align: top;
+}
+.home_market_fig{
+    font-size: 40px;
+    font-weight: 600;
+    height: 120px;
+    width: 120px;
+    line-height: 120px;
+    margin: 0 auto;
+    border: 4px solid #a53f3f;
+    border-radius: 500px;
 }
 
 #home_section_top_arrow{
@@ -66,6 +76,7 @@ body>section{
     width: 100px;
     display: inline-block;
     text-align: center;
+    text-transform: capitalize;
 }
 .home_stores img{
     height: 100px; width: 100px;
@@ -75,8 +86,15 @@ body>section{
 .home_btnSlack{
     display: inline-block;
     height: 30px;
-    border-radius: 4px;
+    border-radius: 6px;
     padding: 10px;
+    color: #FFFFFF;
+    font-weight: bold;
+    text-decoration: none;
+}
+.home_btnSlack:hover{
+    background: none;
+    background-color: #585858;
 }
 .home_btnSlack img{
     max-height: 100%;
@@ -88,12 +106,36 @@ body>section{
     line-height: 30px;
 }
 
+
+
+#home_section_contact{
+    background-color: #652b2b;
+    color: #e6e6e6;
+}
+
+.home_contactList{
+    display: inline-block;
+    text-align: left;
+    margin: 20px 0px;
+    opacity: 0.6;
+    font-size: 14px;
+}
+
+.home_copyright{
+    position: absolute;
+    left: 0px; right: 0px; bottom: 0px;
+    text-align: center;
+    padding: 8px 0px;
+}
+
 @media (min-width:320px) {
 
 }/* smartphones, iPhone, portrait 480x320 phones */
 @media (min-width:481px){}/* portrait e-readers (Nook/Kindle), smaller tablets @ 600 or @ 640 wide. */
-@media (min-width:641px){}/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
-@media (min-width:961px){
+@media (min-width:641px){
+    #home_section_top{
+        height: 1200px;
+    }
     .home_logo_name{
         padding: 10px 0px;
         font-size: 60px;
@@ -101,6 +143,12 @@ body>section{
     .home_logo_slogan{
         font-size: 30px;
     }
+    .home_market_block{
+        width: 300px;
+    }
+}/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
+@media (min-width:961px){
+    
 }/* tablet, landscape iPad, lo-res laptops ands desktops */
 @media (min-width:1025px){}/* big landscape tablets, laptops, and desktops */
 @media (min-width:1281px){}/* hi-res laptops and desktops */
