--- a/base.css
+++ b/base.css
@@ -11,13 +11,28 @@ body{
     position: relative;
     margin: 0px;
     font-family: Roboto, arial;
-    background-color: #F8F8FF;
+    background-color: #ECEFF1;
     color: #2b2b2b;
 }
 
 .clickable{cursor: pointer; cursor: hand;}
 .display_none{display: none !important;}
 .text_align_left{text-align:left;}
+
+.base_background_red_grad{
+    background: #f44336; /* Old browsers */
+    background: -moz-linear-gradient(-14deg, #f44336 52%, #e53935 52%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-14deg, #f44336 52%,#e53935 52%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(166deg, #f44336 52%,#e53935 52%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f44336', endColorstr='#e53935',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.base_background_red_grad_V{
+    background: #f44336; /* Old browsers */
+    background: -moz-linear-gradient(-114deg, #f44336 52%, #e53935 52%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-114deg, #f44336 52%,#e53935 52%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(66deg, #f44336 52%,#e53935 52%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f44336', endColorstr='#e53935',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
 
 .base_background_greyGrad{
     /* fallback */ 
@@ -68,9 +83,79 @@ body{
 .base_background_grey{
     background-color: #2b2b2b !important;
 }
+
+.base_color_red_500{
+    color: #F44336;
+}
+
+
+.base_color_grey_50{
+    color: #ECEFF1;
+}
+.base_color_grey_100{
+    color: #CFD8DC;
+}
+.base_color_grey_200{
+    color: #B0BEC5;
+}
+.base_color_grey_500{
+    color: #607D8B;
+}
+.base_color_grey_700{
+    color: #455A64;
+}
+.base_color_grey_900{
+    color: #263238;
+}
+
 .base_color_white{
     color: #FFFFFF;
 }
+
+/*https://medium.com/@Florian/freebie-google-material-design-shadow-helper-2a0501295a2d*/
+.base_boxshadow_1{
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24) !important;
+}
+.base_boxshadow_2{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
+}
+.base_boxshadow_3{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
+}
+.base_boxshadow_4{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
+}
+.base_boxshadow_5{
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
+}
+.base_boxshadow_1, .base_boxshadow_2, .base_boxshadow_3, .base_boxshadow_4, .base_boxshadow_5{
+    -webkit-transition: all 250ms !important;
+    -moz-transition: all 250ms !important;
+    transition: all 250ms !important;
+}
+.base_boxshadow_1.box_shadow_hover:hover,
+.base_boxshadow_2.box_shadow_hover:hover,
+.base_boxshadow_3.box_shadow_hover:hover,
+.base_boxshadow_4.box_shadow_hover:hover,
+.base_boxshadow_5.box_shadow_hover:hover{
+    -webkit-transform: translateY(-5px) !important;
+    -moz-transform: translateY(-5px) !important;
+    transform: translateY(-5px) !important;
+}
+.base_boxshadow_1.box_shadow_hover:hover{
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23) !important;
+}
+.base_boxshadow_2.box_shadow_hover:hover{
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23) !important;
+}
+.base_boxshadow_3.box_shadow_hover:hover{
+    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22) !important;
+}
+.base_boxshadow_4.box_shadow_hover:hover{
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22) !important;
+}
+
+
 
 
 @media (min-width:320px) {}/* smartphones, iPhone, portrait 480x320 phones */
