--- a/home.css
+++ b/home.css
@@ -1,5 +1,5 @@
 .home_body>section{
-    padding: 5px;
+    padding: 20px 5px;
     text-align:center;
 }
 .home_body>section>h1{
@@ -81,7 +81,7 @@
     margin: auto;
     border-radius: 6px;
     padding: 10px;
-    bottom: 34px;
+    bottom: 4%;
     font-size: 22px;
     width: 200px;
 }
@@ -267,7 +267,7 @@
 
     #home_section_top_arrow{
         font-size: 30px;
-        bottom: 120px;
+        bottom: 12%;
         width: 240px;
     }
 
