--- a/home.css
+++ b/home.css
@@ -347,6 +347,11 @@
     .home_package_column{
         font-size: 20px;
     }
+
+    #home_cta_email, #home_cta_btn{
+        display: inline-block;
+        width: auto;
+    }
 }/* portrait tablets, portrait iPad, landscape e-readers, landscape 800x480 or 854x480 phones */
 @media (min-width:961px){
     .home_package_container{
